@@ -1,25 +1,23 @@
 use strict;
 use warnings;
-use ExtUtils::MakeMaker;
+use inc::Module::Install;
+use 5.006;
 
-WriteMakefile(
-    NAME          => 'App::Bondage',
-    AUTHOR        => 'Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>',
-    VERSION_FROM  => 'lib/App/Bondage.pm',
-    ABSTRACT_FROM => 'lib/App/Bondage.pm',
-    ($ExtUtils::MakeMaker::VERSION >= 6.31
-        ? (LICENSE => 'perl')
-        : ()
-    ),
-    EXE_FILES     => [ 'script/bondage' ],
-    PREREQ_PM     => {
-        'POE::Component::Client::DNS' => '0.99',
-        'POE::Component::Daemon'      => '0',
-        'POE::Component::IRC'         => '6.06',
-        'POE::Filter::IRCD'           => '2.34',
-        'Config::Any'                 => '0.11',
-        'Tie::File'                   => '0',
-        'Digest::MD5'                 => '0',
-        'Test::More'                  => '0',
-    }
-);
+name           ('App-Bondage');
+perl_version   ('5.006');
+author         ('Hinrik Örn Sigurðsson <hinrik.sig@gmail.com>');
+abstract_from  ('lib/App/Bondage.pm');
+version_from   ('lib/App/Bondage.pm');
+install_script ('script/bondage');
+license        ('perl');
+githubmeta     ();
+requires       ('POE::Component::Client::DNS' => '0.99');
+requires       ('POE::Component::Daemon'      => '0');
+requires       ('POE::Component::IRC'         => '6.06');
+requires       ('POE::Filter::IRCD'           => '2.34');
+requires       ('Config::Any'                 => '0.11');
+requires       ('Tie::File'                   => '0');
+requires       ('Digest::MD5'                 => '0');
+test_requires  ('Test::More'                  => '0');
+tests_recursive();
+WriteAll();
